# text_clustering_Word2Vec_FastText

./: README.md  notebook.ipynb  pyproject.toml
