[tool.poetry]
name = "ud4d"
version = "0.1.0"
description = "test task"
authors = ["Artem Sorokin <85310022+juman-j@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
nltk = "^3.8.1"
gensim = "^4.3.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
ipython = "^8.14.0"
openpyxl = "^3.1.2"
yellowbrick = "^1.5"
mittens = "^0.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system.environment]
TOKENIZERS_PARALLELISM = "true"
